# got-auditor

./: Cargo.toml  README.md
src/: main.rs
xz-real-backdoor/: Dockerfile  Vagrantfile  entrypoint.sh  mock_backdoor.c  simulate_hook.sh
